--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <hibernate-version>5.0.1.Final</hibernate-version>
         <jettyVersion>7.2.0.v20101020</jettyVersion>
+        <jersey2.version>2.19</jersey2.version>
+        <jaxrs.version>2.0.1</jaxrs.version>
     </properties>
 
     <groupId>com</groupId>
@@ -37,22 +39,35 @@
             <version>${hibernate-version}</version>
         </dependency>
 
+        <!-- JAX-RS -->
         <dependency>
-            <groupId>com.sun.jersey</groupId>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>${jaxrs.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>${jersey2.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>1.8</version>
+            <version>${jersey2.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.sun.jersey.contribs</groupId>
-            <artifactId>jersey-multipart</artifactId>
-            <version>1.8</version>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey2.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>1.8</version>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.23.1</version>
         </dependency>
 
         <dependency>
@@ -73,6 +88,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
