--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <jettyVersion>7.2.0.v20101020</jettyVersion>
         <jersey2.version>2.19</jersey2.version>
         <jaxrs.version>2.0.1</jaxrs.version>
+        <guice.version>4.2.0</guice.version>
     </properties>
 
     <groupId>com</groupId>
@@ -74,6 +75,12 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
             <version>${jettyVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
         </dependency>
 
     </dependencies>
