--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>DataBaseService</module>
+        <module>REST</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -19,26 +25,6 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
 
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate-version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate-version}</version>
-        </dependency>
 
         <!-- JAX-RS -->
         <dependency>
@@ -83,10 +69,11 @@
             <version>${guice.version}</version>
         </dependency>
 
+
     </dependencies>
 
-
-    <build>
+<build>
+    <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
@@ -94,6 +81,8 @@
                 <version>${jettyVersion}</version>
             </plugin>
         </plugins>
-    </build>
+    </pluginManagement>
+</build>
+
 
 </project>
