--- a/Frontend/src/main/Application/package.json
+++ b/Frontend/src/main/Application/package.json
@@ -7,7 +7,7 @@
     "local": "ng serve --aot -o --proxy-config local-server.conf.json",
     "server": "tsc-watch ./server/server.ts --outDir ./server/dist --onSuccess \"node ./server/dist/server.js\" --onFailure \"echo Beep! Compilation Failed\" --compiler typescript/bin/tsc",
     "build": "ng build",
-    "buildProduction": "ng build --prod --base-href /test",
+    "buildProduction": "ng build --prod --base-href ./ ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
