--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -19,6 +19,13 @@
              <artifactId>frontend-maven-plugin</artifactId>
              <version>1.6</version>
          </dependency>
+         <dependency>
+             <groupId>com</groupId>
+             <artifactId>REST</artifactId>
+             <version>1.0-SNAPSHOT</version>
+             <type>war</type>
+             <scope> compile </scope>
+         </dependency>
      </dependencies>
 
     <build>
